tests/03-conflict.rs
use defaults::Defaults;

#[derive(Defaults, Default)]
struct Foo {
    x: usize,
    y: usize,
}

fn main() {}
